--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <h1>Welcome to weather app</h1>
+      <h1>Welcome to weather app !</h1>
       <div class="row">
         <form action="">
           <input type="search" id="search" placeholder="Search by city name" autocomplete="off" />
@@ -19,7 +19,7 @@
         <div>
           <img src="/cloud.png" alt="" srcset="" />
         </div>
-        <div>
+        <div class="tempInfo">
           <h2>32℃</h2>
           <h3>clear</h3>
         </div>
