--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/weather-app-icon.jpg" type="image/x-icon">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <main>
-      <h1>Welcome to weather app !</h1>
-      <div class="row">
-        <form action="">
-          <input type="search" id="search" placeholder="Search by city name" autocomplete="off" />
-        </form>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="/weather-app-icon.jpg" type="image/x-icon">
+  <title>Weather App</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main>
+    <h1>Welcome to weather app !</h1>
+    <div class="row">
+      <form>
+        <input type="search" id="search" placeholder="Search by city name" autocomplete="off" />
+      </form>
+    </div>
+    <div class="row" id="weather">
+      <div>
+        <img src="/cloud.png" alt="" srcset="" />
       </div>
-      <div class="row" id="weather">
-        <div>
-          <img src="/cloud.png" alt="" srcset="" />
-        </div>
-        <div class="tempInfo">
-          <h2>32℃</h2>
-          <h3>clear</h3>
-        </div>
+      <div class="tempInfo">
+        <h2>32℃</h2>
+        <h3>clear</h3>
       </div>
-    </main>
-    <script src="index.js"></script>
-  </body>
+    </div>
+  </main>
+  <script src="index.js"></script>
+</body>
+
 </html>
